encoded categorical variable done

--- a/m04_v01_store_sales_prediction.ipynb
+++ b/m04_v01_store_sales_prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 269,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-14T19:34:21.876139Z",
@@ -34,7 +34,7 @@
     "\n",
     "from scipy import stats as ss\n",
     "\n",
-    "from sklearn.preprocessing import RobustScaler, MinMaxScaler"
+    "from sklearn.preprocessing import RobustScaler, MinMaxScaler, LabelEncoder\n"
    ]
   },
   {
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -1474,152 +1474,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>539782</th>\n",
-       "      <td>908</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5740</td>\n",
-       "      <td>1</td>\n",
+       "      <th>648027</th>\n",
+       "      <td>998</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3893</td>\n",
        "      <td>0</td>\n",
-       "      <td>1980.0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2010</td>\n",
+       "      <td>0</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2005</td>\n",
        "      <td>1</td>\n",
-       "      <td>37</td>\n",
-       "      <td>2009</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>11</td>\n",
+       "      <td>28</td>\n",
+       "      <td>48</td>\n",
+       "      <td>100</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>899711</th>\n",
+       "      <td>692</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5315</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>142</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>659717</th>\n",
+       "      <td>423</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14462</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1270.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>11</td>\n",
+       "      <td>17</td>\n",
+       "      <td>46</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>465583</th>\n",
+       "      <td>299</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5524</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38630.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2014</td>\n",
        "      <td>0</td>\n",
        "      <td>2014</td>\n",
-       "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>10</td>\n",
-       "      <td>44</td>\n",
-       "      <td>234</td>\n",
+       "      <td>19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>508449</th>\n",
-       "      <td>795</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5654</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>510.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>1</td>\n",
-       "      <td>35</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>510392</th>\n",
+       "      <th>36187</th>\n",
        "      <td>508</td>\n",
        "      <td>1</td>\n",
-       "      <td>14013</td>\n",
+       "      <td>13455</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1280.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2014</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2015</td>\n",
        "      <td>1</td>\n",
        "      <td>40</td>\n",
        "      <td>2011</td>\n",
        "      <td>0</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>3</td>\n",
-       "      <td>31</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>131</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>876147</th>\n",
-       "      <td>543</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2242</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1080.0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>19</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>725211</th>\n",
-       "      <td>132</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3818</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1040.0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>6</td>\n",
+       "      <td>29</td>\n",
        "      <td>27</td>\n",
-       "      <td>2012</td>\n",
        "      <td>0</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>9</td>\n",
-       "      <td>19</td>\n",
-       "      <td>38</td>\n",
-       "      <td>0</td>\n",
-       "      <td>64</td>\n",
+       "      <td>196</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        store  day_of_week  sales  promo  school_holiday  \\\n",
-       "539782    908            3   5740      1               0   \n",
-       "508449    795            3   5654      1               0   \n",
-       "510392    508            1  14013      1               0   \n",
-       "876147    543            2   2242      0               0   \n",
-       "725211    132            4   3818      0               0   \n",
-       "\n",
-       "        competition_distance  competition_open_since_month  \\\n",
-       "539782                1980.0                             7   \n",
-       "508449                 510.0                             4   \n",
-       "510392                1280.0                             3   \n",
-       "876147                1080.0                            12   \n",
-       "725211                1040.0                             9   \n",
-       "\n",
-       "        competition_open_since_year  promo2  promo2_since_week  \\\n",
-       "539782                         2010       1                 37   \n",
-       "508449                         2014       1                 35   \n",
-       "510392                         2014       1                 40   \n",
-       "876147                         2012       0                 19   \n",
-       "725211                         2013       1                 27   \n",
-       "\n",
-       "        promo2_since_year  is_promo  year  month  day  week_of_year  \\\n",
-       "539782               2009         0  2014      3    5            10   \n",
-       "508449               2010         0  2014      4    2            14   \n",
-       "510392               2011         0  2014      3   31            14   \n",
-       "876147               2013         0  2013      5    7            19   \n",
-       "725211               2012         0  2013      9   19            38   \n",
-       "\n",
-       "        competition_time_month  promo_time_week  \n",
-       "539782                      44              234  \n",
-       "508449                       0              188  \n",
-       "510392                       1              131  \n",
-       "876147                       5                0  \n",
-       "725211                       0               64  "
+       "        store  day_of_week  sales  promo  school_holiday  competition_distance  competition_open_since_month  competition_open_since_year  promo2  promo2_since_week  promo2_since_year  is_promo  year  month  day  week_of_year  competition_time_month  promo_time_week\n",
+       "648027    998            4   3893      0               0                 780.0                             9                         2005       1                  5               2013         1  2013     11   28            48                     100               43\n",
+       "899711    692            2   5315      0               0                  40.0                             8                         2001       0                 16               2013         0  2013      4   16            16                     142                0\n",
+       "659717    423            7  14462      0               0                1270.0                             5                         2014       0                 46               2013         0  2013     11   17            46                      -6                0\n",
+       "465583    299            6   5524      0               0               38630.0                             9                         2012       0                 19               2014         0  2014      5   10            19                      20                0\n",
+       "36187     508            1  13455      1               1                1280.0                             6                         2015       1                 40               2011         0  2015      6   29            27                       0              196"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -1702,8 +1674,273 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.3.1. Enconding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "store                                    int64\n",
+       "day_of_week                              int64\n",
+       "date                            datetime64[ns]\n",
+       "sales                                    int64\n",
+       "promo                                    int64\n",
+       "state_holiday                           object\n",
+       "school_holiday                           int64\n",
+       "store_type                              object\n",
+       "assortment                              object\n",
+       "competition_distance                   float64\n",
+       "competition_open_since_month             int64\n",
+       "competition_open_since_year              int64\n",
+       "promo2                                   int64\n",
+       "promo2_since_week                        int64\n",
+       "promo2_since_year                        int64\n",
+       "is_promo                                 int64\n",
+       "year                                   float64\n",
+       "month                                    int32\n",
+       "day                                      int32\n",
+       "week_of_year                            UInt32\n",
+       "year_week                               object\n",
+       "competition_since               datetime64[ns]\n",
+       "competition_time_month                 float64\n",
+       "promo_since                     datetime64[ns]\n",
+       "promo_time_week                        float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 285,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = df5.select_dtypes(include=['object'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state_holiday</th>\n",
+       "      <th>store_type</th>\n",
+       "      <th>assortment</th>\n",
+       "      <th>year_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>436330</th>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>a</td>\n",
+       "      <td>extended</td>\n",
+       "      <td>2014-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>466008</th>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>d</td>\n",
+       "      <td>extended</td>\n",
+       "      <td>2014-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240902</th>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>d</td>\n",
+       "      <td>basic</td>\n",
+       "      <td>2014-51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144781</th>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>a</td>\n",
+       "      <td>basic</td>\n",
+       "      <td>2015-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>723457</th>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>a</td>\n",
+       "      <td>extended</td>\n",
+       "      <td>2013-37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       state_holiday store_type assortment year_week\n",
+       "436330   regular_day          a   extended   2014-22\n",
+       "466008   regular_day          d   extended   2014-18\n",
+       "240902   regular_day          d      basic   2014-51\n",
+       "144781   regular_day          a      basic   2015-12\n",
+       "723457   regular_day          a   extended   2013-37"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.sample(5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# state_holiday - One Hot Encoding\n",
+    "df5 = pd.get_dummies(df5, prefix=['state_holiday'], columns=['state_holiday'])\n",
+    "\n",
+    "# store_type - Label Encoding\n",
+    "le = LabelEncoder()\n",
+    "df5['store_type'] = le.fit_transform(df5['store_type'])\n",
+    "\n",
+    "# assortment - Ordinal Encoding\n",
+    "# criar um dicionario para ordenar a ordem que eu quero\n",
+    "assortment_dict = { 'basic' : 1, 'extra' : 2, 'extended' : 3}\n",
+    "df5['assortment']= df5['assortment'].map(assortment_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = df5.select_dtypes(include=['object'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>391778</th>\n",
+       "      <td>2014-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3769</th>\n",
+       "      <td>2015-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>951365</th>\n",
+       "      <td>2013-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>640693</th>\n",
+       "      <td>2013-48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257278</th>\n",
+       "      <td>2014-49</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       year_week\n",
+       "391778   2014-28\n",
+       "3769     2015-30\n",
+       "951365   2013-08\n",
+       "640693   2013-48\n",
+       "257278   2014-49"
+      ]
+     },
+     "execution_count": 296,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
